--- a/package.json
+++ b/package.json
@@ -2,13 +2,47 @@
   "name": "pivot",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky install",
+    "type-check:affected": "npx nx affected --target=type-check",
+    "type-check:all": "npx nx run-many --target=type-check",
+    "lint:affected": "npx nx affected --target=lint",
+    "lint:all": "npx nx run-many --target=lint",
+    "test:affected": "npx nx affected --target=test --watch=false",
+    "test:all": "npx nx run-many --target=test --watch=false"
+  },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/devkit": "^15.8.8",
+    "@nrwl/eslint-plugin-nx": "^15.8.8",
+    "@types/redux": "^3.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@nrwl/js": "15.8.7",
     "@nrwl/workspace": "15.8.7",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.3",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
     "nx": "15.8.7",
-    "prettier": "^2.6.2"
+    "postcss-nesting": "^11.2.1",
+    "prettier": "^2.6.2",
+    "typescript": "^4.9.3",
+    "vite": "^4.2.0",
+    "vitest": "^0.29.7"
+  },
+  "workspaces": {
+    "packages": [
+      "apps/*",
+      "packages/*"
+    ]
   }
 }
