--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@nrwl/devkit": "^15.8.8",
