--- a/apps/client/tsconfig.node.json
+++ b/apps/client/tsconfig.node.json
@@ -1,4 +1,13 @@
 {
-  "extends": "../../tsconfig.node.json",
-  "include": ["./aliases.ts", "./vite.config.ts"]
+  "extends": "./tsconfig.json",
+  "include": ["./src/**/*.test.ts"],
+  "exclude": ["./src/**/*.ts"],
+  "compilerOptions": {
+    "composite": true,
+    "isolatedModules": false,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "allowSyntheticDefaultImports": true,
+    "types": ["node", "jest"]
+  }
 }
