--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,5 @@ jobs:
       - run: npx nx format:check
 
       - run: npx nx affected --target=lint --parallel=3
-      - run: npx nx affected --target=test --parallel=3
+      - run: npm run test:affected
       - run: npx nx affected --target=build --parallel=3
