--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
 
       - run: npx nx format:check
 
-      - run: npx nx affected --target=lint --parallel=3
-      - run: npm run test:affected
-      - run: npx nx affected --target=build --parallel=3
+      - run: npm run lint:all
+      - run: npm run test:all
+      - run: npm run type-check:all
