--- a/apps/client/tsconfig.lib.json
+++ b/apps/client/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["./src/**/*.test.ts"],
-  "include": ["./src/**/*.ts"]
+  "exclude": ["./src/**/*.test.ts", "./src/**/*.test.tsx"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
