--- a/apps/client/tsconfig.node.json
+++ b/apps/client/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./src/**/*.test.ts"],
-  "exclude": ["./src/**/*.ts"],
+  "include": ["./src/**/*.test.ts", "./src/**/*.test.tsx"],
+  "exclude": ["./src/**/*.ts", "./src/**/*.tsx"],
   "compilerOptions": {
     "composite": true,
     "isolatedModules": false,
