Add injectable slice

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,13 @@
     ],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "argsIgnorePattern": "^_",
+        "caughtErrorsIgnorePattern": "^_"
+      }
+    ],
 
     "no-debugger": "off",
     "no-unused-vars": "off"
