--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@pivot/pivot-resolver": ["packages/pivot-resolver/src/index.ts"],
       "@pivot/redux-registry": ["packages/redux-registry/src/index.ts"],
       "@pivot/redux-types": ["packages/redux-types/src/index.ts"],
+      "@pivot/services-context": ["packages/services-context/src/index.ts"],
       "@pivot/slice": ["packages/slice/src/index.ts"],
       "@pivot/template": ["packages/template/src/index.ts"],
       "@pivot/util-promise": ["packages/util-promise/src/index.ts"]
