--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nrwl/js": "15.8.7",
     "@nrwl/nx-cloud": "^15.3.2",
     "@nrwl/workspace": "15.8.7",
+    "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
@@ -33,6 +34,7 @@
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
+    "jsdom": "^21.1.1",
     "nx": "15.8.7",
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.6.2",
