--- a/packages/services-context/tsconfig.lib.json
+++ b/packages/services-context/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "exclude": ["./src/**/*.test.ts"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "src/index.test.tsx"]
 }
