--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.6.2",
     "typescript": "^4.9.3",
+    "typescript-plugin-css-modules": "^5.0.0",
     "vite": "^4.2.0",
     "vitest": "^0.29.7"
   },
