Add custom elements and design css

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "lit": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.1"
