--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lit": "^2.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "reselect": "^4.1.7"
   },
   "devDependencies": {
     "@nrwl/devkit": "^15.8.8",
