--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
   },
   "workspaces": {
     "packages": [
-      "apps/*",
-      "packages/*"
+      "apps/**",
+      "packages/**"
     ]
   }
 }
