--- a/packages/client/components/tsconfig.lib.json
+++ b/packages/client/components/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
   "exclude": ["./src/**/*.test.ts"],
-  "include": ["./src/**/*.ts", "src/UserNav.tsx"]
+  "include": ["./src/**/*.ts"]
 }
