--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,21 +5,13 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "files": ["*.ts", "*.tsx"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["@nrwl/nx", "@typescript-eslint", "simple-import-sort"],
+  "plugins": ["@typescript-eslint", "simple-import-sort"],
   "rules": {
-    "@nrwl/nx/enforce-module-boundaries": [
-      "error",
-      {
-        "allowCircularSelfDependency": true,
-        "checkDynamicDependenciesExceptions": ["!*"]
-      }
-    ],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-unused-vars": [
