--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -1,8 +1,12 @@
 {
   "name": "client",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "vite",
+    "lint": "eslint src --config ../../.eslintrc.json",
+    "lint:commit": "eslint src --config ../../.eslintrc.commit.json",
+    "preview": "vite preview",
+    "test": "vitest --config ../../vitest.config.js",
+    "type-check": "tsc --noEmit"
   }
 }
