--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,6 +6,7 @@
     "lint": "eslint src --config ../../.eslintrc.json",
     "lint:commit": "eslint src --config ../../.eslintrc.commit.json",
     "preview": "vite preview",
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "test": "vitest --config ../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
