--- a/packages/design/css/package.json
+++ b/packages/design/css/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@pivot/design-css",
   "main": "./src/index.ts",
-  "scripts": {}
+  "scripts": {
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input"
+  }
 }
