--- a/packages/template/package.json
+++ b/packages/template/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "lint": "eslint src --config ../../.eslintrc.json",
     "lint:commit": "eslint src --config ../../.eslintrc.commit.json",
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "test": "vitest --config ../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
