--- a/nx.json
+++ b/nx.json
@@ -10,6 +10,7 @@
           "e2e",
           "lint",
           "lint:commit",
+          "stylelint",
           "test",
           "type-check"
         ],
