--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:all": "npx nx run-many --target=lint:commit",
     "test:affected": "npx nx affected --target=test --watch=false",
     "test:all": "npx nx run-many --target=test --watch=false",
-    "lint:all:commit": "npx nx run-many --target=lint:commit"
+    "lint:all:commit": "npx nx run-many --target=lint:commit",
+    "stylelint:affected": "npx nx affected --target=stylelint"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.1",
-    "reselect": "^4.1.7"
+    "reselect": "^4.1.7",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0"
   },
   "devDependencies": {
     "@nrwl/devkit": "^15.8.8",
