--- a/packages/client/components/package.json
+++ b/packages/client/components/package.json
@@ -2,6 +2,7 @@
   "name": "@pivot/client-components",
   "main": "./src/index.ts",
   "scripts": {
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "lint": "eslint src --config ../../../.eslintrc.json",
     "test": "vitest --config ../../../vitest.config.js",
     "type-check": "tsc --noEmit"
