--- a/packages/client/nav/package.json
+++ b/packages/client/nav/package.json
@@ -2,6 +2,7 @@
   "name": "@pivot/client-nav",
   "main": "./src/index.ts",
   "scripts": {
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "lint": "eslint src --config ../../../.eslintrc.json",
     "lint:commit": "eslint src --config ../../../.eslintrc.commit.json",
     "test": "vitest --config ../../../vitest.config.js",
