--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "~assets/*": ["apps/client/src/assets/*"],
       "~modules/*": ["apps/client/src/modules/*"],
       "~services": ["apps/client/src/services/index.ts"],
+      "~services/*": ["apps/client/src/services/*"],
       "~store": ["apps/client/src/store/index.ts"],
       "@pivot/client/auth": ["packages/client/auth/src/index.ts"],
       "@pivot/client/cache": ["packages/client/cache/src/index.ts"],
