--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "lit": "^2.7.0",
+    "msw": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.1",
@@ -55,5 +56,8 @@
       "apps/**",
       "packages/**"
     ]
+  },
+  "msw": {
+    "workerDirectory": "apps/client"
   }
 }
