--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -1,13 +1,5 @@
 {
   "extends": "../../tsconfig.json",
-  "include": [],
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.lib.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
-    }
-  ]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "files": []
 }
