--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "prepare": "husky install",
     "type-check:affected": "npx nx affected --target=type-check",
     "type-check:all": "npx nx run-many --target=type-check",
-    "lint:affected": "npx nx affected --target=lint:commit",
-    "lint:all": "npx nx run-many --target=lint:commit",
+    "lint:affected": "npx nx affected --target=lint:strict",
+    "lint:all": "npx nx run-many --target=lint",
     "test:affected": "npx nx affected --target=test --watch=false",
     "test:all": "npx nx run-many --target=test --watch=false",
-    "lint:all:commit": "npx nx run-many --target=lint:commit",
+    "lint:all:strict": "npx nx run-many --target=lint:strict",
     "stylelint:affected": "npx nx affected --target=stylelint"
   },
   "private": true,
