--- a/packages/client/project/package.json
+++ b/packages/client/project/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "lint": "eslint src --config ../../../.eslintrc.json",
-    "lint:commit": "eslint src --config ../../../.eslintrc.commit.json",
+    "lint:strict": "eslint src --config ../../../.eslintrc.strict.json",
     "test": "vitest --config ../../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
