--- a/packages/lib/resource/package.json
+++ b/packages/lib/resource/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@pivot/client-auth",
+  "name": "@pivot/lib-resource",
   "main": "./src/index.ts",
   "scripts": {
     "lint": "eslint src --config ../../../.eslintrc.json",
     "lint:strict": "eslint src --config ../../../.eslintrc.strict.json",
+    "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "test": "vitest --config ../../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
