Add type checking

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - run: npm ci
       - run: npm run lint:affected
       - run: npm run test:affected
-      - run: npm run type-check:affected
       - run: npm run stylelint:affected
+      - run: npm run type-check
