--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "license": "MIT",
   "scripts": {
     "prepare": "husky install",
-    "type-check:affected": "npx nx affected --target=type-check",
-    "type-check:all": "npx nx run-many --target=type-check",
     "lint:affected": "npx nx affected --target=lint:strict",
     "lint:all": "npx nx run-many --target=lint",
     "test:affected": "npx nx affected --target=test --watch=false",
     "test:all": "npx nx run-many --target=test --watch=false",
     "lint:all:strict": "npx nx run-many --target=lint:strict",
-    "stylelint:affected": "npx nx affected --target=stylelint"
+    "stylelint:affected": "npx nx affected --target=stylelint",
+    "type-check": "tsc -p ./tsconfig.src.json --noEmit"
   },
   "private": true,
   "dependencies": {
