--- a/packages/client/project/package.json
+++ b/packages/client/project/package.json
@@ -6,6 +6,6 @@
     "lint": "eslint src --config ../../../.eslintrc.json",
     "lint:strict": "eslint src --config ../../../.eslintrc.strict.json",
     "test": "vitest --config ../../../vitest.config.js",
-    "type-check": "tsc --noEmit"
+    "type-check": "bash -c tsc --noEmit"
   }
 }
