--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "redux": "^4.2.1",
-    "reselect": "^4.1.7",
-    "stylelint": "^15.3.0",
-    "stylelint-config-standard": "^31.0.0"
+    "reselect": "^4.1.7"
   },
   "devDependencies": {
     "@nrwl/devkit": "^15.8.8",
@@ -45,6 +43,8 @@
     "nx": "15.8.7",
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.6.2",
+    "stylelint": "^15.3.0",
+    "stylelint-config-standard": "^31.0.0",
     "typescript": "^4.9.3",
     "typescript-plugin-css-modules": "^5.0.0",
     "vite": "^4.2.0",
