--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "include": ["**/*.ts", "**/*.tsx"]
 }
