Manually set env variable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       VITE_CI: true
+      VITE_SUPABASE_API_URL: https://bzorcyxlshyjsykloifx.supabase.co
     steps:
       - uses: actions/checkout@v2
         with:
