Use headless for app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,12 +13,10 @@
     "moduleResolution": "Node",
     "noEmit": true,
     "paths": {
+      "~app": ["apps/client/src/app/index.ts"],
+      "~app/*": ["apps/client/src/app/*"],
       "~assets/*": ["apps/client/src/assets/*"],
       "~modules/*": ["apps/client/src/modules/*"],
-      "~services": ["apps/client/src/services/index.ts"],
-      "~services/*": ["apps/client/src/services/*"],
-      "~store": ["apps/client/src/store/index.ts"],
-      "~store/*": ["apps/client/src/store/*"],
       "@pivot/client/auth": ["packages/client/auth/src/index.ts"],
       "@pivot/client/cache": ["packages/client/cache/src/index.ts"],
       "@pivot/client/components": ["packages/client/components/src/index.ts"],
