--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,9 @@
       "@pivot/lib/dynamic-slice-registry": [
         "packages/lib/dynamic-slice-registry/src/index.ts"
       ],
+      "@pivot/lib/dynamic-subscription-registry": [
+        "packages/lib/dynamic-subscription-registry/src/index.ts"
+      ],
       "@pivot/lib/dynamic-store": ["packages/lib/dynamic-store/src/index.ts"],
       "@pivot/lib/headless": ["packages/lib/headless/src/index.ts"],
       "@pivot/lib/injectable": ["packages/lib/injectable/src/index.ts"],
