--- a/tsconfig.src.json
+++ b/tsconfig.src.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "apps/fixtures/**/*.ts"],
   "include": ["**/*.ts", "**/*.tsx"]
 }
