--- a/apps/fixtures/package.json
+++ b/apps/fixtures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fixtures",
   "scripts": {
-    "start": "deno run --allow-read --allow-env --allow-net src/main.ts"
+    "start": "ts-node -r tsconfig-paths/register ./src/main.ts"
   }
 }
