Add project fixtures

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
         "packages/design/custom-elements/src/index.ts"
       ],
       "@pivot/design/variables": ["packages/design/variables/src/index.ts"],
+      "@pivot/fixtures": ["packages/fixtures/src/index.ts"],
       "@pivot/lib/async-queue": ["packages/lib/async-queue/src/index.ts"],
       "@pivot/lib/create-store": ["packages/lib/create-store/src/index.ts"],
       "@pivot/lib/dynamic-slice-registry": [
