--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "~assets/*": ["apps/client/src/assets/*"],
       "~modules/*": ["apps/client/src/modules/*"],
       "@pivot/client/auth": ["packages/client/auth/src/index.ts"],
+      "@pivot/client/breadcrumb": ["packages/client/breadcrumb/src/index.ts"],
       "@pivot/client/cache": ["packages/client/cache/src/index.ts"],
       "@pivot/client/components": ["packages/client/components/src/index.ts"],
       "@pivot/client/deployments": ["packages/client/deployments/src/index.ts"],
@@ -71,6 +72,7 @@
       "@pivot/util/classname": ["packages/util/classname/src/index.ts"],
       "@pivot/util/function": ["packages/util/function/src/index.ts"],
       "@pivot/util/promise": ["packages/util/promise/src/index.ts"],
+      "@pivot/util/string": ["packages/util/string/src/index.ts"],
       "@pivot/util/time": ["packages/util/time/src/index.ts"],
       "@pivot/util/url": ["packages/util/url/src/index.ts"]
     },
