--- a/packages/design/react/loader/package.json
+++ b/packages/design/react/loader/package.json
@@ -3,9 +3,9 @@
   "main": "./src/index.ts",
   "scripts": {
     "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
-    "lint": "eslint src --config ../../../.eslintrc.json",
-    "lint:strict": "eslint src --config ../../../.eslintrc.strict.json",
-    "test": "vitest --config ../../../vitest.config.js",
+    "lint": "eslint src --config ../../../../.eslintrc.json",
+    "lint:strict": "eslint src --config ../../../../.eslintrc.strict.json",
+    "test": "vitest --config ../../../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
 }
