Prettier fix on lint:

--- a/packages/lib/resource/package.json
+++ b/packages/lib/resource/package.json
@@ -2,8 +2,8 @@
   "name": "@pivot/lib-resource",
   "main": "./src/index.ts",
   "scripts": {
-    "lint": "eslint src --config ../../../.eslintrc.json",
-    "lint:strict": "eslint src --config ../../../.eslintrc.strict.json",
+    "lint": "prettier src --write && eslint src --config ../../../.eslintrc.json",
+    "lint:strict": "prettier src --write && eslint src --config ../../../.eslintrc.strict.json",
     "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
     "test": "vitest --config ../../../vitest.config.js",
     "type-check": "tsc --noEmit"
