--- a/packages/client/components/package.json
+++ b/packages/client/components/package.json
@@ -3,7 +3,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "stylelint": "stylelint \"src/**/*.css\" --allow-empty-input",
-    "lint": "eslint src --config ../../../.eslintrc.json",
+    "lint": "prettier src --write && eslint src --config ../../../.eslintrc.json",
     "test": "vitest --config ../../../vitest.config.js",
     "type-check": "tsc --noEmit"
   }
