--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,6 @@
     "moduleResolution": "Node",
     "noEmit": true,
     "paths": {
-      "~app": ["apps/client/src/app/index.ts"],
-      "~app/*": ["apps/client/src/app/*"],
-      "~assets/*": ["apps/client/src/assets/*"],
-      "~modules/*": ["apps/client/src/modules/*"],
       "@pivot/client/auth": ["packages/client/auth/src/index.ts"],
       "@pivot/client/breadcrumb": ["packages/client/breadcrumb/src/index.ts"],
       "@pivot/client/cache": ["packages/client/cache/src/index.ts"],
@@ -33,21 +29,21 @@
       "@pivot/client/head": ["packages/client/head/src/index.ts"],
       "@pivot/client/http": ["packages/client/http/src/index.ts"],
       "@pivot/client/nav": ["packages/client/nav/src/index.ts"],
-      "@pivot/client/project": ["packages/client/project/src/index.ts"],
       "@pivot/client/pending-deployment": [
         "packages/client/pending-deployment/src/index.ts"
       ],
+      "@pivot/client/project": ["packages/client/project/src/index.ts"],
       "@pivot/client/releases": ["packages/client/releases/src/index.ts"],
       "@pivot/client/router": ["packages/client/router/src/index.ts"],
       "@pivot/client/shared-interfaces": [
         "packages/client/shared-interfaces/src/index.ts"
       ],
       "@pivot/client/variables": ["packages/client/variables/src/index.ts"],
-      "@pivot/design/lit": ["packages/design/lit/src/index.ts"],
       "@pivot/design/css": ["packages/design/css/src/index.ts"],
       "@pivot/design/custom-elements": [
         "packages/design/custom-elements/src/index.ts"
       ],
+      "@pivot/design/lit": ["packages/design/lit/src/index.ts"],
       "@pivot/design/react/loader": [
         "packages/design/react/loader/src/index.ts"
       ],
@@ -59,9 +55,6 @@
       "@pivot/lib/dynamic-slice-registry": [
         "packages/lib/dynamic-slice-registry/src/index.ts"
       ],
-      "@pivot/lib/subscription-manager": [
-        "packages/lib/subscription-manager/src/index.ts"
-      ],
       "@pivot/lib/dynamic-store": ["packages/lib/dynamic-store/src/index.ts"],
       "@pivot/lib/headless": ["packages/lib/headless/src/index.ts"],
       "@pivot/lib/injectable": ["packages/lib/injectable/src/index.ts"],
@@ -70,6 +63,9 @@
       "@pivot/lib/redux-types": ["packages/lib/redux-types/src/index.ts"],
       "@pivot/lib/resource": ["packages/lib/resource/src/index.ts"],
       "@pivot/lib/slice": ["packages/lib/slice/src/index.ts"],
+      "@pivot/lib/subscription-manager": [
+        "packages/lib/subscription-manager/src/index.ts"
+      ],
       "@pivot/lib/use-selector": ["packages/lib/use-selector/src/index.ts"],
       "@pivot/lib/use-service": ["packages/lib/use-service/src/index.ts"],
       "@pivot/template": ["packages/template/src/index.ts"],
@@ -79,9 +75,17 @@
       "@pivot/util/promise": ["packages/util/promise/src/index.ts"],
       "@pivot/util/string": ["packages/util/string/src/index.ts"],
       "@pivot/util/time": ["packages/util/time/src/index.ts"],
-      "@pivot/util/url": ["packages/util/url/src/index.ts"]
+      "@pivot/util/url": ["packages/util/url/src/index.ts"],
+      "~app": ["apps/client/src/app/index.ts"],
+      "~app/*": ["apps/client/src/app/*"],
+      "~assets/*": ["apps/client/src/assets/*"],
+      "~modules/*": ["apps/client/src/modules/*"]
     },
-    "plugins": [{ "name": "typescript-plugin-css-modules" }],
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ],
     "resolveJsonModule": true,
     "rootDir": ".",
     "skipLibCheck": true,
@@ -91,8 +95,12 @@
   },
   "files": [],
   "references": [
-    { "path": "./tsconfig.src.json" },
-    { "path": "./tsconfig.test.json" }
+    {
+      "path": "./tsconfig.src.json"
+    },
+    {
+      "path": "./tsconfig.test.json"
+    }
   ],
   "ts-node": {
     "compilerOptions": {
