--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "bracketSameLine": true,
   "printWidth": 100,
   "singleQuote": true,
+  "semi": true,
+  "tabWidth": 2,
   "trailingComma": "all"
 }
