--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@nx/devkit": "16.0.1",
+    "@nx/eslint-plugin": "16.0.1",
+    "@nx/js": "16.0.1",
+    "@nx/workspace": "16.0.1",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.3",
@@ -38,9 +42,11 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "husky": "^8.0.3",
     "jsdom": "^21.1.1",
     "nx": "16.0.1",
+    "nx-cloud": "16.0.5",
     "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.8",
     "stylelint": "^15.6.0",
@@ -48,12 +54,7 @@
     "typescript": "^5.0.4",
     "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.3.3",
-    "vitest": "^0.29.7",
-    "nx-cloud": "16.0.5",
-    "@nx/devkit": "16.0.1",
-    "@nx/workspace": "16.0.1",
-    "@nx/eslint-plugin": "16.0.1",
-    "@nx/js": "16.0.1"
+    "vitest": "^0.29.7"
   },
   "engines": {
     "node": "18.13.0"
